--- a/blog/templates/default.html
+++ b/blog/templates/default.html
@@ -4,14 +4,22 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>My Hakyll Blog - $title$</title>
+        <link href='https://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
+        <title>Google Summer of Code - Project Blog</title>
         <link rel="stylesheet" type="text/css" href="/css/default.css" />
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
     </head>
     <body>
         <div id="header">
             <div id="logo">
-                <a href="/">My Hakyll Blog</a>
+                <a>Google Summer of Code</a>
             </div>
+            <div id="subtitle">
+                <a href="/">Project Blog</a>
+            </div>
+        </div>
+
+        <div id="navbar">
             <div id="navigation">
                 <a href="/">Home</a>
                 <a href="/about.html">About</a>
@@ -21,8 +29,8 @@
         </div>
 
         <div id="content">
-            <h1>$title$</h1>
 
+          <div id="title"><h1>$title$</h1></div>
             $body$
         </div>
         <div id="footer">
