--- a/blog/templates/default.html
+++ b/blog/templates/default.html
@@ -7,6 +7,7 @@
         <link href='https://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
         <title>Google Summer of Code - Project Blog</title>
         <link rel="stylesheet" type="text/css" href="/css/default.css" />
+        <link rel="stylesheet" type="text/css" href="/css/code.css" />
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
     </head>
     <body>
