--- a/blog/css/code.css
+++ b/blog/css/code.css
@@ -3,8 +3,13 @@ pre {
     background-color: #f2f2f2;
 }
 
+code {
+    font-size: 10pt;
+    background-color: #f2f2f2;
+}
+
 .sourceCode {
-    font-size: 12pt;
+    font-size: 10pt;
     font-family: courier;
     width: 90%;
     margin: 0 auto;
