--- a/blog/css/default.css
+++ b/blog/css/default.css
@@ -3,6 +3,20 @@ a {
     font-color: gray;
 }
 
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+}
+
+p.caption{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
+}
+
 body {
     color: black;
     font-size: 16px;
@@ -97,6 +111,10 @@ h1 {
 
 h2 {
     font-size: 20px;
+}
+
+h3 {
+    font-size: 16px;
 }
 
 div.info {
