--- a/blog/css/default.css
+++ b/blog/css/default.css
@@ -10,6 +10,13 @@ img {
     width: 60%;
 }
 
+img.wide {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+}
+
 p.caption{
     display: block;
     margin-left: auto;
@@ -24,6 +31,11 @@ body {
     width: 800px;
     font-family: Open Sans;
     text-align: justify;
+}
+
+span.display{
+    display: table;
+    margin: 0 auto;
 }
 
 div#header {
