--- a/blog/templates/default.html
+++ b/blog/templates/default.html
@@ -4,6 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <script type="text/javascript"
+                src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
         <link href='https://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
         <title>Google Summer of Code - Project Blog</title>
         <link rel="stylesheet" type="text/css" href="/css/default.css" />
