--- a/blog/css/default.css
+++ b/blog/css/default.css
@@ -10,6 +10,33 @@ img {
     width: 60%;
 }
 
+table {
+    margin-left:  auto;
+    margin-right: auto;
+    border-collapse: collapse;
+}
+
+caption {
+    caption-side: bottom;
+    margin: 15px;
+}
+
+span.math inline {
+    font-size: 2pt !important;
+}
+
+th {
+    border-bottom: 1px solid black;
+    padding: 15px;
+}
+
+tr:hover {background-color: #f5f5f5}
+
+td {
+    border: 0px solid black;
+    padding: 5px;
+}
+
 img.wide {
     display: block;
     margin-left: auto;
